--- a/HTML_Front/home.html
+++ b/HTML_Front/home.html
@@ -21,5 +21,8 @@
             </button>
         </div>
     </div>
+<script src="js/config.js"></script>
+<script src="js/auth.js"></script>
 </body>
+
 </html>
