--- a/HTML_Front/home.html
+++ b/HTML_Front/home.html
@@ -21,10 +21,9 @@
             </button>
         </div>
     </div>
-<script src="js/config.js"></script>
-<script src="js/auth.js"></script>
-<script src="js/home.js"></script>
+<script type="module" src="js/home.js"></script>
 </body>
 
 </html>
+
 
