Update callback.html Ref #81

--- a/HTML_Front/callback.html
+++ b/HTML_Front/callback.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Authentifizierung</title>
-    <link rel="stylesheet" href="callback.css">
+    <link rel="stylesheet" href="css/callback.css">
 </head>
 <body>
 
@@ -12,6 +12,6 @@
     <p id="statusText">Login wird geprüft…</p>
 </div>
 
-<script src="callback.js"></script>
+<script src="js/callback.js"></script>
 </body>
 </html>
