css link bearbeitet. Ref #153

--- a/HTML_Front/signUp.html
+++ b/HTML_Front/signUp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Registrierung</title>
-  <link rel="stylesheet" href="js/signup.css" />
+  <link rel="stylesheet" href="css/signUp.css" />
 </head>
 <body>
 
@@ -64,6 +64,6 @@
     </div>
   </div>
 
-  <script type="module" src="signup.js"></script>
+  <script type="module" src="js/signUp.js"></script>
 </body>
 </html>
