Update order.html. Ref #164

--- a/HTML_Front/order.html
+++ b/HTML_Front/order.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Bestellung</title>
     <link rel="stylesheet" href="css/callback.css">
 </head>
 <body>
@@ -10,5 +10,7 @@
         <h2>Bestellung</h2>
         <p id="orderText">Bestellung wird geprüft…</p>
     </div>
+
+    <script type="module" src="js/orderPage.js"></script>
 </body>
 </html>
