env.js in callback.html integriert. Ref #226

--- a/HTML_Front/callback.html
+++ b/HTML_Front/callback.html
@@ -11,7 +11,7 @@
     <h2>Authentifizierung</h2>
     <p id="statusText">Login wird geprüft…</p>
 </div>
-
+<script src="env.js"></script>
 <script type="module" src="js/callback.js"></script>
 </body>
 </html>
