Update verify.html Ref #204
einbindung von javascript

--- a/HTML_Front/verify.html
+++ b/HTML_Front/verify.html
@@ -18,6 +18,7 @@
         <p id="verifyMessage"></p>
     </div>
 
+    <script src="env.js"></script>
     <script type="module" src="js/verify.js"></script>
 </body>
 </html>
